RESOLVED FIXED277170
Should not apply synthesis to local @font-face fonts that already match per descriptors
https://bugs.webkit.org/show_bug.cgi?id=277170
Summary Should not apply synthesis to local @font-face fonts that already match per d...
fantasai
Reported 2024-07-26 14:38:54 PDT
Created attachment 471976 [details] updated font-face-multiple-faces.html We currently synthesize bold and oblique (italics) when we choose faces defined in an @font-face block that already declares that face to be bold or italic, if when we look up the underlying font data it happens to not actually be bold enough or italic enough. But the spec says that descriptors override the font data, so this is wrong. We should match faces based on the descriptors, and then use the font as-is. Spec: https://www.w3.org/TR/css-fonts-4/#font-prop-desc
Attachments
updated font-face-multiple-faces.html (4.19 KB, text/html)
2024-07-26 14:38 PDT, fantasai
no flags
fantasai
Comment 1 2024-07-26 14:39:31 PDT
Radar WebKit Bug Importer
Comment 2 2024-07-26 14:39:53 PDT
fantasai
Comment 3 2024-07-26 14:54:24 PDT
EWS
Comment 4 2024-07-29 14:17:03 PDT
Committed 281525@main (21695ca97d99): <https://commits.webkit.org/281525@main> Reviewed commits have been landed. Closing PR #31270 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.